--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,3 +14,128 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+
+
+/**
+ * Buttons
+ * --------------------------------------------------
+ */
+.button {
+  border-color: transparent;
+  background-color: #f8f8f8;
+  color: #444;
+  position: relative;
+  display: inline-block;
+  margin: 0;
+  padding: 0 12px;
+  min-width: 52px;
+  min-height: 47px;
+  border-width: 1px;
+  border-style: solid;
+  border-radius: 4px;
+  vertical-align: top;
+  text-align: center;
+  text-overflow: ellipsis;
+  font-size: 16px;
+  line-height: 42px;
+  cursor: pointer; }
+.button:hover {
+  color: #444;
+  text-decoration: none; }
+.button.active, .button.activated {
+  border-color: #a2a2a2;
+  background-color: #e5e5e5; }
+.button:after {
+  position: absolute;
+  top: -6px;
+  right: -6px;
+  bottom: -6px;
+  left: -6px;
+  content: ' '; }
+
+.button.button-block, .button.button-full {
+  margin-top: 10px;
+  margin-bottom: 10px; }
+
+.button.button-dark {
+  border-color: transparent;
+  background-color: #444;
+  color: #fff; }
+.button.button-dark:hover {
+  color: #fff;
+  background-color: #666666;
+  text-decoration: none; }
+.button.button-dark.active, .button.button-dark.activated {
+  border-color: #a2a2a2;
+  background-color: #262626; }
+.button.button-dark.button-clear {
+  border-color: transparent;
+  background: none;
+  box-shadow: none;
+  color: #444; }
+.button.button-dark.button-icon {
+  border-color: transparent;
+  background: none; }
+.button.button-dark.button-outline {
+  border-color: #444;
+  background: transparent;
+  color: #444; }
+.button.button-dark.button-outline.active, .button.button-dark.button-outline.activated {
+  background-color: #444;
+  box-shadow: none;
+  color: #fff; }
+
+
+.padding > .button.button-block:first-child {
+  margin-top: 0; }
+
+.button-block {
+  display: block;
+  clear: both; }
+.button-block:after {
+  clear: both; }
+
+.button-full,
+.button-full > .button {
+  display: block;
+  margin-right: 0;
+  margin-left: 0;
+  border-right-width: 0;
+  border-left-width: 0;
+  border-radius: 0; }
+
+button.button-block,
+button.button-full,
+.button-full > button.button,
+input.button.button-block {
+  width: 100%; }
+
+a.button {
+  text-decoration: none; }
+a.button .icon:before, a.button.icon:before, a.button.icon-left:before, a.button.icon-right:before {
+  margin-top: 2px; }
+
+.button.disabled,
+.button[disabled] {
+  opacity: .4;
+  cursor: default !important;
+  pointer-events: none; }
+
+
+
+.error {
+  color: #f54a4a;
+  padding-left: 15px;
+  font-weight: bold;
+}
+
+
+ion-input {
+  color: #666;
+  font-weight: bold;
+}
+
+ion-textarea {
+  color: #666;
+  font-weight: bold;
+}
