--- a/src/pages/detalle-ave/detalle-ave.scss
+++ b/src/pages/detalle-ave/detalle-ave.scss
@@ -1,3 +1,35 @@
-page-home {
+page-detalle-ave {
+  img.head {
+    width: 75px;
+    height: 75px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    font-weight: bold;
+  }
+
+  h3 {
+    background-color: #f0f0f0;
+    padding: 13px;
+    text-align: center;
+    border: #d0d0d0;
+    border-style: solid;
+    border-width: 1px 0 1px 0;
+
+  }
+
+
+  ion-item {
+    background-color: #f0f0f0 !important;
+  }
+
+  ion-item:nth-child(odd) {
+    background-color: #ffffff !important;
+  }
+
+  p.text {
+    font-weight: bold;
+    font-size: 18px;
+  }
 
 }
